crates/swc_ecma_parser/tests/test262-error-references/fail/8753a1cb7850d657.js.stderr
error: Cannot use a reserved word as a shorthand property
 --> $DIR/tests/test262-parser/fail/8753a1cb7850d657.js:1:3
  |
1 | ({var} = 0)
  |   ^^^

